# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("hilogd_etc") {
  deps = [
    ":hilog_domains.conf",
    ":hilogd.rc",
  ]
}

ohos_prebuilt_etc("hilog_domains.conf") {
  source = "hilog_domains.conf"
  if (is_standard_system) {
    part_name = "hiviewdfx_hilog_native"
  } else {
    part_name = "hilog"
  }
  subsystem_name = "hiviewdfx"
}

ohos_prebuilt_etc("hilogd.rc") {
  source = "hilogd.rc"
  relative_install_dir = "init"
  if (is_standard_system) {
    part_name = "hiviewdfx_hilog_native"
  } else {
    part_name = "hilog"
  }
  subsystem_name = "hiviewdfx"
}
