# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "hilog/hilog"

ohos_fuzztest("HiLogClientFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "../hilogclient_fuzzer"

  include_dirs = [ "../../../interfaces/native/innerkits/include" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "hilogclient_fuzzer.cpp" ]
  configs = [ "../../../frameworks/libhilog:libhilog_config" ]
  deps = [ "../../../interfaces/native/innerkits:libhilog" ]
  external_deps = [ "init:libbegetutil" ]
  part_name = "hilog"
  subsystem_name = "hiviewdfx"
}
