# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "hilog/hilog"

ohos_fuzztest("HiLogServerFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "../hilogserver_fuzzer"

  include_dirs = [
    "../../../services/hilogd/include",
    "../../../interfaces/native/innerkits/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "../../../services/hilogd/flow_control.cpp",
    "../../../services/hilogd/log_buffer.cpp",
    "../../../services/hilogd/log_collector.cpp",
    "../../../services/hilogd/log_domains.cpp",
    "../../../services/hilogd/log_stats.cpp",
    "hilogserver_fuzzer.cpp",
  ]
  configs = [ "../../../frameworks/libhilog:libhilog_config" ]
  deps = [ "../../../interfaces/native/innerkits:libhilog" ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "init:libbegetutil",
    "zlib:shared_libz",
  ]
  part_name = "hilog"
  subsystem_name = "hiviewdfx"
}
