# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "hilog/hilog"

config("module_private_config") {
  visibility = [ ":*" ]
}

ohos_unittest("HilogToolTest") {
  module_out_path = module_output_path

  sources = [ "hilogtool_test.cpp" ]

  configs = [
    ":module_private_config",
    "//base/hiviewdfx/hilog/frameworks/libhilog:libhilog_config",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("HilogUtilsTest") {
  module_out_path = module_output_path

  sources = [ "hilog_utils_test.cpp" ]

  configs = [
    ":module_private_config",
    "//base/hiviewdfx/hilog/frameworks/libhilog:libhilog_config",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("HilogPrintTest") {
  module_out_path = module_output_path

  sources = [ "hilog_print_test.cpp" ]

  configs = [
    ":module_private_config",
    "//base/hiviewdfx/hilog/frameworks/libhilog:libhilog_config",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":HilogPrintTest",
    ":HilogToolTest",
    ":HilogUtilsTest",
  ]
}
